# MediTrackRE

./: .gitignore
.docs/: 前端代码结构设计.md  前端风格设计文档.md  后端API接口需求文档.md  接口需求文档.md  数据库设计文档.md  模块Docstring编写规范.md  风格设计文档.md
backend/: main.py  pyproject.toml
backend/src/api/: __init__.py  auth.py  drugs.py  plans.py  user.py
backend/src/core/: __init__.py  config.py  deps.py  security.py  utils.py
backend/src/db/: __init__.py  database.py
backend/src/models/: __init__.py  drug.py  plan.py  plan_drug.py  profile.py  relation.py  track.py  user.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  config.ts  request.ts
frontend/src/api/: auth.ts  drug.ts  friend.ts  plan.ts  user.ts
frontend/src/components/: AuthForm.vue  UserPreview.vue
frontend/src/components/common/: ConfirmModal.vue  FlowSelect.vue
frontend/src/components/drug-management/: DrugAddModal.vue  DrugCard.vue  DrugEditPanel.vue  DrugList.vue  SearchBar.vue  TopBar.vue
frontend/src/components/friend-management/: AddFriendDialog.vue  ChatMessageWrapper.vue  ChatPanel.vue  EditDialog.vue  FriendItem.vue  FriendList.vue
frontend/src/components/home/: DrugPreview.vue  FriendPreview.vue  PlanPreview.vue  UserPreview.vue
frontend/src/components/plan-management/: PlanCard.vue  PlanList.vue  (+3 more)
frontend/src/pages/: Auth.vue  Home.vue
frontend/src/router/: index.ts
frontend/src/stores/: authStore.ts  drugStore.ts  planStore.ts  userStore.ts
frontend/src/types/: authTypes.ts  drugTypes.ts  friendTypes.ts  planTypes.ts  userTypes.ts
frontend/src/utils/: error.ts
(+18 files in other folders)
